feat(Entrypoint): add export PATH (does not work). Add java extra args. When container shutdown send /stop to MC server to clean shutdown